--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="gameScreen">
         <h1>Stormlight Archives Trivia</h1>
         <div id="time">
-
+            
         </div>
 
         <button type="button" class="btn btn-primary btn-lg" id="start">Start</button>
@@ -34,6 +34,9 @@
         </div>
         <div id="answer4">
 
+        </div>
+        <div id="test">
+            
         </div>
     </div>
     <script src="./assets/javascript/app.js"></script>
