--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Star Wars game</title>
+    <title>Trivia game</title>
 
 </head>
 <body>
@@ -17,13 +17,16 @@
         <div id="time">
             
         </div>
-
         <button type="button" class="btn btn-primary btn-lg" id="start">Start</button>
 
+        <br>
+        <br>
+       
         <div id="question">
 
         </div>
-        <div id="answer1">
+        <img id="image">
+        <div class="answer" id="answer1">
 
         </div>
         <div id="answer2">
@@ -35,6 +38,7 @@
         <div id="answer4">
 
         </div>
+        <button type="button" class="btn btn-primary btn-lg" id="restart">Play Again?</button>
     </div>
     <script src="./assets/javascript/app.js"></script>
 </body>
