fixed bug where if you hit one of the stats at the end it would think you are answering the last question again and added border and color change when you hover over an answer

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
         </div>
         <img id="image">
-        <div class="answer" id="answer1">
+        <div class="choice" class="answer" id="answer1">
 
         </div>
-        <div id="answer2">
+        <div class="choice" id="answer2">
 
         </div>
-        <div id="answer3">
+        <div class="choice" id="answer3">
 
         </div>
-        <div id="answer4">
+        <div class="choice" id="answer4">
 
         </div>
         <button type="button" class="btn btn-primary btn-lg" id="restart">Play Again?</button>
